--- a/about.html
+++ b/about.html
@@ -27,29 +27,33 @@
 	<link rel="stylesheet" href="styles/global-initialisation.css">
 	<link rel="stylesheet" href="styles/page-structure.css">
 	<link rel="stylesheet" href="styles/page-face.css">
-	<link rel="stylesheet" href="styles/index-structure.css">
-	<link rel="stylesheet" href="styles/index-structure-mobile.css">
-	<link rel="stylesheet" href="styles/index-face.css">
 
 	<!-- Scripts -->
 	<script src="scripts/header/header-header.js"></script>
 	<script src="scripts/header/header.js" type="module"></script>
-	<script src="scripts/index-header.js"></script>
-	<script src="scripts/index.js" type="module"></script>
 	<script src="scripts/footer/footer-header.js"></script>
 	<script src="scripts/footer/footer.js" type="module"></script>
 
 	<!-- Others -->
 	<link rel="icon" href="/src/images/svg/vtcomp_mark.svg">
 	<title>
-		Top | VT-Comp
+		About | VT-Comp
 	</title>
 </head>
 
 <body>
 	<div class="main-section back">
 		<div id="main" class="main-section page">
-		</div>
+			<div class="main-section block">
+				<h1>
+					このサイトについて
+				</h1>
+			</div>
+	
+			<div class="main-section block">
+				OBSのブラウザソースで使える配信素材を置いておく場所です。<br>
+				時計、カウンター、なんらかのランダムアニメーション等を作る予定です。
+			</div>
 	</div>
 </body>
 
