fix google analytics tags

--- a/about.html
+++ b/about.html
@@ -3,13 +3,13 @@
 <head>
 	<!-- Google tag (gtag.js) -->
 	<meta name="google-adsense-account" content="ca-pub-8799987832232140">
-	<script async src="https://www.googletagmanager.com/gtag/js?id={MEASUREMENT ID}"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-KTYVMN6S3G"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
 		gtag('js', new Date());
 
-		gtag('config', '{MEASUREMENT ID}');
+		gtag('config', 'G-KTYVMN6S3G');
 	</script>
 
 	<!-- Viewport and Charset -->
