--- a/about.html
+++ b/about.html
@@ -51,8 +51,14 @@
 			</div>
 	
 			<div class="main-section block">
-				OBSのブラウザソースで使える配信素材を置いておく場所です。<br>
-				時計、カウンター、なんらかのランダムアニメーション等を作る予定です。
+				VT-Compは、VTuberの為の配信素材を提供するウェブサイトです。<br>
+				VTはVTuber(バーチャルYouTuber)、Compはコンポーネント(部品, パーツ)を意味します。
+			</div>
+
+			<div class="main-section block">
+				時計だけでなく、数値カウンターやアニメーション付きの画面隠し等を用意する予定です。<br>
+				スロットなど、乱数を用いたものも考えています。<br>
+				他にもご要望があれば<a href="/contact.html" class="anchor-link">Contact</a>のアンケートからどうぞ。お待ちしています。
 			</div>
 	</div>
 </body>
