--- a/404.html
+++ b/404.html
@@ -37,7 +37,7 @@
 	<!-- Others -->
 	<link rel="icon" href="/src/images/svg/vtcomp_mark.svg">
 	<title>
-		About | VT-Comp
+		404 Not Found | VT-Comp
 	</title>
 </head>
 
@@ -45,22 +45,16 @@
 	<div class="main-section back">
 		<div id="main" class="main-section page">
 			<div class="main-section block">
-				<h1>
-					このサイトについて
-				</h1>
-			</div>
-	
-			<div class="main-section block">
-				VT-Compは、VTuberの為の配信素材を提供するウェブサイトです。<br>
-				VTはVTuber(バーチャルYouTuber)、Compはコンポーネント(部品, パーツ)を意味します。
+				<div style="width: fit-content; height: fit-content; margin: auto; font-size: 96px; font-weight: 800;">
+					404 Not Found
+				</div>
+				<img src="/src/images/png/404dog.png" style="display: block; margin: auto; opacity: 60%;">
 			</div>
 
-			<div class="main-section block">
-				時計だけでなく、数値カウンターやアニメーション付きの画面隠し等を用意する予定です。<br>
-				スロットなど、乱数を用いたものも考えています。<br>
-				他にもご要望があれば<a href="/contact.html" class="anchor-link">Contact</a>のアンケートからどうぞ。お待ちしています。
+			<div class="main-section block" style="width: fit-content; height: fit-content; margin: auto; font-size: 48px;">
+				このページは存在しません。
 			</div>
-			</div>
+		</div>
 	</div>
 </body>
 
