--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 		gtag('config', 'G-KTYVMN6S3G');
 	</script>
 
+	<!-- Google Adsense -->
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8958367360679728"
+     crossorigin="anonymous"></script>
+
 	<!-- Viewport and Charset -->
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1" />
 	<meta charset="utf-8" />
